Bug 296242 - kjots doesn't save when quitting via Ctrl+Q.
Summary: kjots doesn't save when quitting via Ctrl+Q.
Status: RESOLVED FIXED
Alias: None
Product: kjots
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 4.8
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Stephen Kelly
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-03-18 00:27 UTC by adriatic.c
Modified: 2020-05-15 10:33 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description adriatic.c 2012-03-18 00:27:00 UTC
Closing kjots via a window manger or by selecting File->Quit correctly saves changes. Closing kjots with Ctrl+Q does not; changes are lost.
Comment 1 Andrew Crouthamel 2018-11-06 15:06:46 UTC
Dear Bug Submitter,

This bug has been stagnant for a long time. Could you help us out and re-test if the bug is valid in the latest version? I am setting the status to NEEDSINFO pending your response, please change the Status back to REPORTED when you respond.

Thank you for helping us make KDE software even better for everyone!
Comment 2 Andrew Crouthamel 2018-11-17 04:59:47 UTC
Dear Bug Submitter,

This is a reminder that this bug has been stagnant for a long time. Could you help us out and re-test if the bug is valid in the latest version? This bug will be moved back to REPORTED Status for manual review later, which may take a while. If you are able to, please lend us a hand.

Thank you for helping us make KDE software even better for everyone!
Comment 3 Igor Poboiko 2020-05-05 09:06:30 UTC
Git commit e520aa4b49a50da8d2b1f08e4b8676213baa5cde by Igor Poboiko.
Committed on 05/05/2020 at 09:06.
Pushed by poboiko into branch 'master'.

[KJots] Provide explicit "Save" action, use standard actions where possible

Summary:
Use some standard actions for save, next page, previous page, rename.
Add "Save" action to menu and toolbar, otherwise it's not even clear how to save the note.
Don't use `QInputDialog` when renaming, just trigger inline rename.

Also, perform save procedure on quit (inside `KJotsWidget::queryClose`).
TODO: this is not yet functional, need to perform a synchronous job and wait for result.
Related: bug 255998

Test Plan: All actions are functional

Reviewers: dvratil

Reviewed By: dvratil

Subscribers: kde-pim

Tags: #kde_pim

Differential Revision: https://phabricator.kde.org/D29291

M  +1    -1    src/KJotsMain.cpp
M  +5    -4    src/kjotspartui.rc
M  +3    -39   src/kjotstreeview.cpp
M  +3    -1    src/kjotstreeview.h
M  +6    -4    src/kjotsui.rc
M  +10   -21   src/kjotswidget.cpp

https://commits.kde.org/kjots/e520aa4b49a50da8d2b1f08e4b8676213baa5cde
Comment 4 Igor Poboiko 2020-05-15 10:33:03 UTC
Git commit 211395370166c1e538b020dfed4b236a7a7a334b by Igor Poboiko.
Committed on 15/05/2020 at 10:32.
Pushed by poboiko into branch 'master'.

[KJots] Save on exit

Summary:
This is follow-up to {D29291}.
When quitting the application, perform a save using the synchronous `ItemModifyJob` interface.
If the job has failed, show a dialog explaining what can be done to avoid data loss (save it to file using Export menu).

Test Plan: Note is now always saved on Ctrl+Q.

Reviewers: dvratil

Reviewed By: dvratil

Subscribers: kde-pim

Tags: #kde_pim

Differential Revision: https://phabricator.kde.org/D29762

M  +1    -9    src/KJotsMain.cpp
M  +0    -3    src/KJotsMain.h
M  +19   -15   src/kjotsmodel.cpp
M  +4    -0    src/kjotsmodel.h
M  +34   -2    src/kjotswidget.cpp

https://commits.kde.org/kjots/211395370166c1e538b020dfed4b236a7a7a334b