[KJots] Save on exit

Summary:
This is follow-up to {D29291}.
When quitting the application, perform a save using the synchronous `ItemModifyJob` interface.
If the job has failed, show a dialog explaining what can be done to avoid data loss (save it to file using Export menu).

BUG: 296242

Test Plan: Note is now always saved on Ctrl+Q.

Reviewers: dvratil

Reviewed By: dvratil

Subscribers: kde-pim

Tags: #kde_pim

Differential Revision: https://phabricator.kde.org/D29762